# jojonas.github.io

./: CNAME  hugo.toml
.github/workflows/: hugo.yml
assets/css/: lightbox.css
assets/js/: lightbox.js
assets/scss/: custom.scss
content/: about.md
content/posts/arduino-ghidra-intro/: index.md
content/posts/crapvpn/: crapvpn_udp.py  index.md
content/posts/crapvpn-dissector/: crapvpn_tcp.lua  crapvpn_udp.lua  index.md
content/posts/nltest-ntowfpassword/: index.md  script.py
content/posts/python-vpn/: crapvpn.py  index.md
content/posts/serialization-patterns/: index.md
content/posts/wireshark-lua-c/: index.md  openssl_test.lua
content/posts/wireshark-lua-c/example/: CMakeLists.txt  example.lua  lexample.c
content/posts/wireshark-tcp/: index.md  template.lua
content/posts/wireshark-vpn/: crapvpn.lua  (+2 more)
layouts/: robots.txt
layouts/_default/: sitemap.xml
layouts/partials/: rfc.html
layouts/shortcodes/: code.html  rfc.html  rfclink.html  toc.html
public/: 404.html  custom.css  index.html  index.xml  sitemap.xml
public/about/: index.html
public/aboutx/: index.html
public/categories/: index.html  index.xml
public/css/: coder-dark.css.map  coder.css.map  custom.css  lightbox.min.20370caf97083ce13ff0dfd151cfe117f59b453a2b002305db9c4b4fd3a96d74.css
public/de/: 404.html  index.html  index.xml
public/en/: 404.html  index.xml  sitemap.xml
public/posts/: index.html  index.xml
public/scss/: custom.css  custom.css.map  custom.min.e82e599ec53a5f343d00910c8511aac5928f958f943274b83b74214b9346140f.css
public/tags/: index.html  index.xml
(+24 files in other folders)
